# inventory-forecast-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  db.py  dto.py  entities.py  server.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: LoginDialog.jsx  TopBar.jsx
frontend/src/pages/: Landing.jsx  Overview.jsx
tests/: test_entities.py  test_server.py
