[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-forecast-dashboard"
version = "0.1.0"
description = "Full-stack inventory management dashboard with demand forecasting capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Juan Ruiz Alonso", email = "jra@codinglab.dev"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
